# memdump-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  LIMITATIONS.md
memdump_toolkit/: __init__.py  __main__.py  analyze_binary.py  analyze_dotnet.py  c2_hunt.py  cli.py  colors.py  constants.py  detect_injection.py  executive_summary.py  extract_config.py  extract_dlls.py  fetch_rules.py  full_analysis.py  go_info.py  html_report.py  identify_go_implants.py  inspect_binary.py  known_good.py  memory_io.py  pe_utils.py  rulesets.default.yml  signatures.default.yml  signatures.py  stack_walk.py  yara_scan.py
memdump_toolkit/data/: known_good_hashes.txt
